# rosettapath

./: LICENSE.md  __init__.py  pyproject.toml  readme.md  rosettapath.py  setup.py  shares.py
rosettapath/: __init__.py  rosettapath.py  shares.py
src/: rosettapath.py
src/rosettapath/: __init__.py
testing/: temp.py  test_rosettapath.py  testfiles.py  testpaths.py
